--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,9 +1,14 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Name:</strong>
-  <%= @chatroom.name %>
-</p>
+	<strong>Name:</strong>
+	<%= @chatroom.name %>
+	</p>
 
-<%= link_to 'Edit', edit_chatroom_path(@chatroom) %> |
-<%= link_to 'Back', chatrooms_path %>
+	<div data-behaviar='messages'>
+	<% 1.upto(1000) do %>
+	<div><strong>excid3:</strong>Hi my kitty :3</div>
+	<% end %>
+</div>
+
+<%= form_for [@chatroom, Message.new] do |f| %>
+	<%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
+	<% end %>
