--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,11 @@
     <title>Chat</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => "reload" %>
+<%= javascript_include_tag "application", "data-turbolinks-track" => "reload" %>
   </head>
-<nav class="navbar navbar-default">
+  <body>
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -32,7 +33,7 @@
           <%= yield :right_nav %>
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
@@ -47,7 +48,22 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  <body>
+	<div class="fluid-container" style="margin-top: 70px"> 
+	 <div class="row">
+	  <div class="col-sm-2" style="position: fixed; top: 70px; left: 0;">
+	  <% if user_signed_in? %>
+	  <h5>Chatrooms</h5>
+	  <ul>
+	  <% current_user.chatrooms.each do |chatroom| %>
+	  <li><%= link_to chatroom.name, chatroom %></li>
+	  <% end %>	 
+	  </ul>
+	 <% end %>
+</div>
+<div class="col-sm-10 col-sm-offset-2">
     <%= yield %>
-  </body>
+    </div>
+   </div>
+  </div>
+ </body>
 </html>
