--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,14 +1,14 @@
 <p>
-	<strong>Name:</strong>
-	<%= @chatroom.name %>
-	</p>
+  <strong>Name:</strong>
+  <%= @chatroom.name %>
+</p>
 
-	<div data-behaviar='messages'>
-	<% 1.upto(1000) do %>
-	<div><strong>excid3:</strong>Hi my kitty :3</div>
-	<% end %>
+<div data-behavior='messages'>
+  <% @messages.each do |message| %>
+    <div><strong><%= message.user.username %>:</strong> <%= message.body %></div>
+  <% end %>
 </div>
 
 <%= form_for [@chatroom, Message.new] do |f| %>
-	<%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
-	<% end %>
+  <%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
+<% end %>
